Fixing some styles & progressbar aligning

--- a/respondent/src/styles.scss
+++ b/respondent/src/styles.scss
@@ -4,9 +4,20 @@
 
 // global styles
 
+
+body {
+    background-color:#eff1f4;
+    text-align:center;
+}
 main {
-  padding: 1em;
   font-family: Arial, Helvetica, sans-serif;
   display: block;
-  background-color:#eff1f4;
+  margin:auto;
+  width:50%;
+}
+
+.progress {
+  font-size: 1.25rem;
+  padding:1em;
+  background-color:#2199e8;
 }
